--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.5.0",
     "lenis": "^1.2.3",
     "lucide-react": "^0.483.0",
