--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.34",
     "@tailwindcss/vite": "^4.0.15",
     "@vercel/analytics": "^1.5.0",
+    "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "framer-motion": "^12.5.0",
     "lenis": "^1.2.3",
     "lucide-react": "^0.483.0",
+    "mongoose": "^8.13.1",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
