--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.15",
     "@vercel/analytics": "^1.5.0",
     "concurrently": "^9.1.2",
+    "contentful": "^11.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
