--- a/package.json
+++ b/package.json
@@ -12,26 +12,18 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^16.1.6",
     "@contentful/rich-text-types": "^17.2.5",
-    "@studio-freight/lenis": "^1.0.34",
     "@tailwindcss/vite": "^4.0.15",
     "@vercel/analytics": "^1.5.0",
-    "concurrently": "^9.1.2",
     "contentful": "^11.9.0",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^5.1.0",
     "framer-motion": "^12.5.0",
     "lenis": "^1.2.3",
-    "lucide-react": "^0.483.0",
-    "mongoose": "^8.13.1",
-    "nodemailer": "^7.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-type-animation": "^3.2.0",
-    "tailwindcss": "^4.0.15",
-    "vanilla-infinite-marquee": "^1.0.12"
+    "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
