--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lenis": "^1.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-type-animation": "^3.2.0",
