--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-phone-number-input": "^3.4.14",
     "react-router-dom": "^7.4.0",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^4.0.15"
