--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-phone-number-input": "^3.4.14",
     "react-router-dom": "^7.4.0",
     "react-type-animation": "^3.2.0",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.15",
+    "xmlbuilder2": "^4.0.3",
+    "xsl": "^0.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
