--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "contentful": "^11.9.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
+    "html-react-parser": "^5.2.17",
     "lenis": "^1.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
